add link to official site on startup message

--- a/src/main/resources/jadice_ja.properties
+++ b/src/main/resources/jadice_ja.properties
@@ -1,5 +1,5 @@
 jadice=JaDice
-result.welcome=<h1>jaDice</h1><p>jaDice\u306fPDIC\u5f62\u5f0f\u306e\u8f9e\u66f8\u306e\u30d3\u30e5\u30fc\u30a2\u3067\u3059\u3002</p>
+result.welcome=<h1>jaDice</h1><p><a href="https://github.com/cat-in-136/jaDice/">https://github.com/cat-in-136/jaDice/</a></p><p>jaDice\u306fPDIC\u5f62\u5f0f\u306e\u8f9e\u66f8\u306e\u30d3\u30e5\u30fc\u30a2\u3067\u3059\u3002</p>
 result.more=\u7d9a\u304d\u3092\u8aad\u3080...
 result.reference=\u300c%s\u300d\u3088\u308a
 result.popup.copy=\u30b3\u30d4\u30fc(C)
